--- a/index.html
+++ b/index.html
@@ -21,13 +21,39 @@
             </nav>
             <div class="subNav">
                 <ul>
-                    <li>faceBook</li>
-                    <li>istargram</li>
-                    <li>twitter</li>
-                    <li>Pinterest</li>
+                    <li><img src="img/facebook.png"></li>
+                    <li><img src="img/instagram.png"></li>
+                    <li><img src="img/twitter.png"></li>
+                    <li><img src="img/pinterest.png"></li>
                 </ul>
             </div>
         </header>
+        <div class="slide">
+            <!-- <img src="img/slide.png"> -->
+        </div>
+
+        <div class="section_one">
+            <div class="left_section">
+                <ul>
+                    <li>1번칸</li>
+                    <li>2번칸</li>
+                    <li>3번칸</li>
+                </ul>
+                <button>All Posts</button>
+            </div>
+            <div class="right_section">
+
+            </div>
+        </div>
+
+        <div class="contact">
+
+        </div>
+
+        <footer class="footer">
+
+        </footer>
     </div>
+    
 </body>
 </html>
